Prevent line break on hyphen in email address

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -77,6 +77,10 @@ main {
   font-size: 3vmin;
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
 /* header */
 
 header {
